[gd_scene load_steps=8 format=3 uid="uid://d1y3no0s41hhe"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_mh2q7"]
[ext_resource type="Script" path="res://Scripts/Player/movement_state_machine.gd" id="2_lsekj"]
[ext_resource type="Script" path="res://Scripts/Player/idle_movement_state.gd" id="3_laixl"]
[ext_resource type="Script" path="res://Scripts/Player/walking_movement_state.gd" id="4_bv8s6"]
[ext_resource type="Script" path="res://Scripts/Player/sprint_movement_state.gd" id="5_kma33"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m03d6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3klv7"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 8
script = ExtResource("1_mh2q7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.864163, 0)
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_m03d6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_3klv7")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47563, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="gun_aim" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.288346)
target_position = Vector3(0, 0, -100)
collide_with_areas = true

[node name="interact_aim" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.288346)
target_position = Vector3(0, 0, -2)
collide_with_areas = true

[node name="Hands" type="Node3D" parent="Head/Camera3D"]

[node name="Primary" type="Node3D" parent="Head/Camera3D/Hands"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.17, -0.096, -0.19)

[node name="Secondary" type="Node3D" parent="Head/Camera3D/Hands"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100708, -0.0650001, -0.25)
visible = false

[node name="Meelee" type="Node3D" parent="Head/Camera3D/Hands"]
transform = Transform3D(0.982574, 0.185872, 0, -0.185872, 0.982574, 0, 0, 0, 1, 0.375439, -0.287582, -0.34927)
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="slide_check" type="RayCast3D" parent="."]

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_lsekj")
CURRENT_STATE = NodePath("IdleMovementState")

[node name="IdleMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("3_laixl")

[node name="WalkingMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("4_bv8s6")

[node name="SprintMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("5_kma33")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
